adds firebaseui.js script

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 	<!-- CDN Link for firebasejs-->
 	<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+	
+	<!-- CDN Link for firebaseUIjs-->
+	<script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script>
+
 
 </head>
 <body>
