--- a/index.html
+++ b/index.html
@@ -1,114 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Train Scheduler</title>
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-	<!-- APP CSS LINK -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-	<!-- FirebaseUI CSS LINK -->
-	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
-
-	<!-- CDN Link for Moment.js-->
-	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
-	<!-- CDN Link for firebasejs-->
-	<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
-	
-	<!-- CDN Link for firebaseUIjs-->
+	<meta charset="UTF-8">
+	<title>Train Scheduler App</title>
+	<!-- *******************************************************************************************
+	* TODO(DEVELOPER): Paste the initialization snippet from:
+	* Firebase Console > Overview > Add Firebase to your web app. *
+	***************************************************************************************** -->
 	<script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
+	<script type="text/javascript">
+	// FirebaseUI config.
+	var uiConfig = {
+		callbacks: {
+			signInSuccess: function(currentUser, credential, redirectUrl) {
+	// Do something.
+	// Return type determines whether we continue the redirect automatically
+	// or whether we leave that to developer to handle.
+	return true;
+	},
+	uiShown: function() {
+	// The widget is rendered.
+	// Hide the loader.
+	document.getElementById('loader').style.display = 'none';
+	}
+	},
+	credentialHelper: firebaseui.auth.CredentialHelper.ACCOUNT_CHOOSER_COM,
+	// Query parameter name for mode.
+	queryParameterForWidgetMode: 'mode',
+	// Query parameter name for sign in success url.
+	queryParameterForSignInSuccessUrl: 'signInSuccessUrl',
+	// Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+	signInFlow: 'popup',
+	signInSuccessUrl: 'trains.html',
+	signInOptions: [
+		// Leave the lines as is for the providers you want to offer your users.
+		firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+		firebase.auth.GithubAuthProvider.PROVIDER_ID,
+	],
+	// Terms of service url.
+	tosUrl: '<your-tos-url>'
+	};
 
-
+	var ui = new firebaseui.auth.AuthUI(firebase.auth());
+	// The start method will wait until the DOM is loaded.
+	ui.start('#firebaseui-auth-container', uiConfig);
+</script>
 </head>
 <body>
-
+<!-- The surrounding HTML is left untouched by FirebaseUI.
+	Your app may use that space for branding, controls and other customizations.-->
 	<h1>Welcome to Train Scheduler App</h1>
-    <div id="sign-in-status"></div>
-    <div id="sign-in"></div>
-    <div id="account-details"></div>
-
-	<div id="container">
-
-		<div class="jumbotron jumbotron-fluid text-center">
-			<h1>Train Scheduler<span>Just Go...</span></h1>
-		</div>
-
-		<div class="panel panel-primary">
-
-			<div class="panel-heading">
-				<h3 class="panel-title">Current Train Schedule  <span class="selected">*Your train is arriving in less than 5 minutes!</span></h3>
-			</div>
-
-			<div class="panel-body">
-				<table class="table table-striped">
-
-					<thead>
-						<tr>
-							<th>Train Name</th>
-							<th>Destination</th>
-							<th>Frequency (min)</th>
-							<th>Next Arrival</th>
-							<th>Minutes Away</th>
-
-						</tr>
-					</thead>
-
-					<tbody id="table-body"></tbody>
-
-				</table>
-			</div>
-
-		</div>
-
-		<div class="panel panel-primary">
-
-			<div class="panel-heading">
-				<h3 class="panel-title">Add Train</h3>
-			</div>
-
-			<div class="panel-body">
-				<form>
-
-					<div class="form-group">
-						<label for="name-input">Train Name</label>
-						<input type="text" class="form-control form-control-lg" id="name-input" placeholder="Adventure Express">
-					</div>
-
-					<div class="form-group">
-						<label for="destination-input">Destination</label>
-						<input type="text" class="form-control form-control-lg" id="destination-input" placeholder="Adventureville">
-					</div>
-					
-					<div class="form-group">
-						<label for="first-train-time-input">First Train Time (military time)</label>
-						<input type="text" class="form-control form-control-lg" id="first-train-time-input" placeholder="22:00">
-					</div>
-
-					<div class="form-group">
-						<label for="frequency-input">Frequency (min)</label>
-						<input type="number" class="form-control form-control-lg" id="frequency-input" placeholder="60">
-					</div>
-
-
-					<button type="button" class="btn btn-primary" id="submit-btn">Submit</button>                         
-
-				</form>
-			</div>
-
-		</div>
-
-	</div>
-
-	<!-- CDN Link for JQuery-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- Script tag for the app.js-->
-	<script src="js/app.js" type="text/javascript"></script>
-
+	<div id="firebaseui-auth-container"></div>
+	<div id="loader">Loading...</div>
 </body>
 </html>
