--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
 </head>
 <body>
 
-    <button id="sign-out">Sign Out</button>
-    <div id="account-details"></div>
-
 	<div id="container">
+		
+		<div id="loginHeader">
+			<button id="sign-out" class="btn btn-default navbar-btn">Sign Out</button>
+			<p class="navbar-text">Signed in as <span id="account-details"></span></p>
+		</div>
+
 
 		<div class="jumbotron jumbotron-fluid text-center">
+
 			<h1>Train Scheduler<span>Just Go...</span></h1>
+			
 		</div>
 
 		<div class="panel panel-primary">
