--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 
 			<div class="panel-body">
-				<table class="table table-striped">
+				<table class="table table-striped table-responsive">
 
 					<thead>
 						<tr>
